--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,9 +2,10 @@
     /* border-bottom: 1px solid #545454; */
     /* border-bottom: 1px solid rgba(84, 84, 84, .7); */
     position: relative;
+  /*border: 1px solid white;*/
   }
 
-.header::before {
+.header::after {
   content: "";
   width: 100%;
   height: 1px;
@@ -17,3 +18,22 @@
   left: 50%;
 }
 
+/*@media screen and (max-width: 568px) {*/
+/*  .add-wrapped-class .header::before {*/
+/*    content: "";*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    color:white;*/
+/*    background-color: #545454;*/
+/*    opacity: .7;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    transform: translateX(-50%);*/
+/*    left: 50%;*/
+/*  }*/
+/*}*/
+/*@media screen and (max-width: 568px) {*/
+/*  .header__wrapped-menu {*/
+/*    width: 100%;*/
+/*  }*/
+/*}*/
