fix: исправление замечаний ревьюера

--- a/src/blocks/header/__navs/_closed/header__navs_closed.css
+++ b/src/blocks/header/__navs/_closed/header__navs_closed.css
@@ -4,9 +4,12 @@
 
 @media screen and (max-width: 568px) {
   .add-wrapped-class .header__navs_closed .header__navs {
+    box-sizing: border-box;
     max-height: 0;
     overflow: hidden;
     border: none;
+    padding: 0;
     margin: 0;
+    transition: max-height .3s;
   }
 }
