--- a/src/blocks/header/__navs/_email/header__navs_email.css
+++ b/src/blocks/header/__navs/_email/header__navs_email.css
@@ -1,11 +1,19 @@
 .header__navs_email {
     font-weight: 500;
-    margin-right: 24px;
+    /*margin-right: 24px;*/
+    padding-right: 24px;
+    /*border: 1px solid red;*/
+}
+@media screen and (max-width: 568px) {
+  .header__navs_email {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 568px) {
   .add-wrapped-class .header__navs_email {
     margin-right: 0;
+    padding: 0;
     margin-bottom: 18px;
     align-self: center;
   }
