--- a/src/blocks/header/__wrapped-logo/header__wrapped-logo.css
+++ b/src/blocks/header/__wrapped-logo/header__wrapped-logo.css
@@ -1,6 +1,6 @@
-/*.header__wrapped-logo {*/
+.header__wrapped-logo {
 
-/*}*/
+}
 @media screen and (max-width: 568px) {
   .add-wrapped-class .header__wrapped-logo {
     width: 100%;
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     /*border: 1px solid green;*/
+    margin: 27px 32px;
   }
 
 }
