--- a/src/blocks/page/__header/page__header.css
+++ b/src/blocks/page/__header/page__header.css
@@ -5,12 +5,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  /*border:1px dashed green;*/
 }
 
 @media screen and (max-width: 568px) {
   .add-wrapped-class .page__header {
-    padding: 32px 0 32px;
+    /*padding: 0 0 32px;*/
+    padding: 0;
     flex-direction: column-reverse;
     align-items: center;
+    /*border:1px dashed green;*/
   }
 }
