--- a/src/blocks/header/__navs/_link/header__navs_link.css
+++ b/src/blocks/header/__navs/_link/header__navs_link.css
@@ -1,6 +1,6 @@
 .header__navs_link {
   color: white;
-  max-height: 22px;
+  /*max-height: 22px;*/
   font-size: 18px;
   font-weight: 400;
   text-decoration: none;
@@ -21,7 +21,7 @@
   .add-wrapped-class .header__navs_link {
     align-self: center;
     text-align: center;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
     margin-right: 0;
   }
 }
