--- a/src/blocks/header/__navs/header__navs.css
+++ b/src/blocks/header/__navs/header__navs.css
@@ -4,16 +4,21 @@
   justify-content: space-between;
   align-items: center;
   margin: 0;
+  /*box-sizing: border-box;*/
   /*border: 1px solid white;*/
 }
 
 @media screen and (max-width: 568px) {
   .add-wrapped-class .header__navs {
     width: 100%;
+    max-height: 200px;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto 27px;
-    padding: 0;
+    box-sizing: border-box;
+    /*margin: 32px 0 40px;*/
+    padding: 32px 0 40px;
+    /*padding: 0;*/
+    transition: max-height .3s;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
   }
 }
